[package]
name = "keymapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.8.4"
evdev = { version = "0.11.0", git = "https://github.com/emberian/evdev" }
lazy_static = "1.4.0"
log = "^0.4.14"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_regex = "1.1.0"
